# mathic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: AddMathic.cmake
docs/snippets/: stack.cl
include/mathic/common/: HashTable.h  Reference.h  ReferenceString.h  SourceBuffer.h  UniqueReference.h
include/mathic/lex/: SourceBuffer.h  Tokens.h  Tokens.inc
lib/common/: CMakeLists.txt  SourceBuffer.cc
lib/lex/: CMakeLists.txt  SourceBuffer.cc  Tokens.cc
tests/: CMakeLists.txt
tests/mathic-test/: CMakeLists.txt  main.cc
